--- a/BookBank/Views/ShoppingCart/Index.cshtml
+++ b/BookBank/Views/ShoppingCart/Index.cshtml
@@ -53,9 +53,7 @@
 <h3>
     <em>Review</em> your cart:
 </h3>
-<p class="btn btn-default" >
-    @Html.ActionLink("Checkout >>", "AddressAndPayment", "Checkout" )
-</p>
+
 <div id="update-message">
 </div>
 <table>
@@ -99,3 +97,7 @@
         </td>
     </tr>
 </table>
+<p class="btn btn-primary">
+    @Html.ActionLink("Checkout >>", "AddressAndPayment", "Checkout")
+</p>
+
